added sign up button

--- a/Login/login.html
+++ b/Login/login.html
@@ -36,7 +36,7 @@
         <div id="contenedor">
             <div id="central">
                 <div id="login">
-                    <div class="titulo">
+                    <div class="title">
                     Burger Base Inventory.
                     </div>
                     <form id="loginform">
@@ -45,6 +45,7 @@
                         <input type="password" placeholder="password" name="password" required>
                         
                         <button type="submit" title="submit" name="submit">Login</button>
+                        <button type="submit" title="submit" name="submit">Sign up</button>
                     
                 </div>
             </div>
