cambios despues del desastre del git pull, ya funciona el graphAPI en la carpeta de menu

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -60,7 +60,7 @@
 
     <!-- graph API -->
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-    <script src="../graphApi/graphApi.js"></script>
+    <script src="/menu/graphApi.js"></script>
 
     <!-- chart API -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
